--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,4 +26,4 @@ importFrom(purrr,map2_chr)
 importFrom(remotes,install_git)
 importFrom(remotes,install_github)
 importFrom(remotes,install_gitlab)
-importFrom(rvcheck,check_github)
+importFrom(utils,packageVersion)
