--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tidymass
 Type: Package
 Title: R packages for mass spectrometry data processing and analysis
-Version: 1.0.1
+Version: 1.0.2
 Authors@R: c(
     person(given = "Xiaotao",
            family = "Shen",
@@ -26,6 +26,7 @@ Depends:
 Imports: 
     crayon,
     purrr,
+    utils,
     stringr,
     cli,
     magrittr,
@@ -39,7 +40,6 @@ Imports:
     metpath,
     metid,
     massqc,
-    rvcheck,
     remotes
 Suggests: 
     knitr,
