--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ import(metid)
 import(metpath)
 importFrom(dplyr,filter)
 importFrom(magrittr,"%>%")
+importFrom(masstools,install_fastgit)
 importFrom(purrr,compact)
 importFrom(purrr,imap)
 importFrom(purrr,keep)
