--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,4 +27,6 @@ importFrom(purrr,map2_chr)
 importFrom(remotes,install_git)
 importFrom(remotes,install_github)
 importFrom(remotes,install_gitlab)
+importFrom(utils,install.packages)
 importFrom(utils,packageVersion)
+importFrom(utils,read.table)
