--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tidymass
 Type: Package
 Title: R packages for mass spectrometry data processing and analysis
-Version: 1.0.8
+Version: 1.0.9
 Authors@R: c(
     person(given = "Xiaotao",
            family = "Shen",
@@ -20,7 +20,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Depends: 
     R (>= 4.1)
 Imports: 
@@ -43,7 +43,8 @@ Imports:
     remotes
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    shiny
 VignetteBuilder: knitr
 Remotes: 
     gitlab::tidymass/masstools,
